2006-02-19 12:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormTextFieldAttributesInspector.m: Correction 
	for bug#15780.

2006-02-09 23:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInfo.plist: Change "RELEASE" to SVN to indicate that 1.0.5 is
	an unstable version.

2006-02-06 21:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSTableViewInspector.gorm
	* Palettes/3Containers/GormTableViewAttributesInspector.m: 
	Correction for bug#15642.

2006-02-03 21:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormScrollViewAttributesInspector.m
	* GormCore/GormScrollViewEditor.m: Corrected problem with adding
	something to a scrollview.

2006-02-01 23:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist
	* Version: Updated with new version information.

2006-02-01 22:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/4Data/GormDateFormatterAttributesInspector.m: Correction 
	for bug#15556

2006-01-25 05:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 1.0.4

2006-01-21 00:19 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m: [GormViewEditor activate] do not send
	notifications about frame size changes, if the object is a standalone
	view.
	* GormCore/GormViewSizeInspector.m: [GormViewSizeInspector setObject:]
	Added code to enable/disable cells if view is standalone.

2006-01-16 23:19 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewSizeInspector.m: Correction for a similar problem
	in the view size inspector. Added to call to abort editing.

2006-01-16 16:25 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormWindowSizeInspector.m: Correction for 
	bug#13994.  abortEditing call to all forms added to revert:.

2006-01-16 12:20 Gregory John Casamento <greg_casamento@yahoo.com>
